# jarvis

./: .env.example  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  main.py  project_manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: approvals.yaml  defense_integrations.yaml  emergency_policies.yaml  features.yaml  models.yaml  policy.yaml  vectorstore.yaml
data/: router_corrections.json
data/logs/: alerts.jsonl  robot_actions.jsonl
data/notifications/: ops_Deploy.txt
data/vectorstore/: meta.jsonl
docs/: ARCHITECTURE.md  MODULE_INDEX.md  RAG_OPS.md
examples/: mqtt_pubsub.py  ros2_chatter.py  run_cybersec_agent.py  run_iot_controller.py  run_research_agent.py  vision_demo.py  voice_demo.py
jarvis_core/: cli.py
jarvis_core/agents/: __init__.py  base.py  biomedical.py  civil.py  comms.py  system.py  (+6 more)
ops/: prometheus.yml
requirements/: base.txt  full.txt
scripts/: build_firmware.py  generate_cad.py  install_tools.sh  preflight.py  run_api.py
tests/: test_agents.py  test_backend_citations.py  test_backends_optional.py  test_biomedical_electrical.py  test_citations_rerank.py  test_computer_engineer.py  test_computer_engineer_lint_deps.py  test_core.py  test_deep_tools.py  test_defense.py  test_e2e_basic.py  test_embeddings_citations.py  test_enhancements.py  test_llm_policy.py  test_mechanical_software.py  test_meta_router_logging_policy.py  test_models_and_vector_config.py  test_pdf_ingest.py  test_persistence.py  test_robotics_civil.py  test_soc_defense.py  test_system_comms.py  test_tools_and_ranking.py
(+76 files in other folders)
