[project]
name = "jarvis-core"
version = "0.1.0"
authors = [{name = "Jarvis Core Team"}]
description = "Unified ASI core with RAG and multi-agent architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["jarvis_core"]
